# Eikonal-Cuda-Cesaroni-Tonarelli-Trabacchin

./: CMakeLists.txt  README.md  install_dependences.sh
localProblem_alt2/: DescentDirectionFactory.cpp  DescentDirections.cpp  LineSearchSolver.cpp  main_eikonal.cpp
localProblem_alt2/include/: DescentDirectionBase.hpp  DescentDirectionFactory.hpp  DescentDirections.hpp  Eikonal_traits.hpp  GradientFiniteDifference.hpp  LineSearchSolver.hpp  LineSearch_options.hpp  LineSearch_traits.hpp  Optimization_options.hpp  Phi.hpp  SimplexData.hpp  json.hpp  solveEikonalLocalProblem.hpp
src/: CudaEikonalTraits.cuh  Kernels.cu  LocalSolver.cuh  Mesh.cu  Mesh.cuh  MultiDomainMesh.cu  Solver.cu  Solver.cuh  TetrahedricalMesh.cu
test/: main.cu  test_local_solver.cpp  test_solver.cpp  test_solver.cu
test/meshes/input_meshes/: cube-10.vtk  cube-5.vtk
test/meshes/output_meshes/: cube-20-new.vtk
